GH-16810 - Drop -XX:MaxPermSize from POJO/MOJO runners (removed in Java 17)