@@ -2536,9 +2536,9 @@ public abstract class Model<M extends Model<M,P,O>, P extends Model.Parameters, 
     sb.p("      cd tmpdir").nl();
     sb.p("      curl http:/").p(H2O.SELF.toString()).p("/3/h2o-genmodel.jar > h2o-genmodel.jar").nl();
     sb.p("      curl http:/").p(H2O.SELF.toString()).p("/3/Models.java/").pobj(_key).p(" > ").p(modelName).p(".java").nl();
-    sb.p("      javac -cp h2o-genmodel.jar -J-Xmx2g -J-XX:MaxPermSize=128m ").p(modelName).p(".java").nl();
+    sb.p("      javac -cp h2o-genmodel.jar -J-Xmx2g ").p(modelName).p(".java").nl();
     // Intentionally disabled since there is no main method in generated code
-    // sb.p("//     java -cp h2o-genmodel.jar:. -Xmx2g -XX:MaxPermSize=256m -XX:ReservedCodeCacheSize=256m ").p(modelName).nl();
+    // sb.p("//     java -cp h2o-genmodel.jar:. -Xmx2g -XX:ReservedCodeCacheSize=256m ").p(modelName).nl();
     sb.nl();
     sb.p("     (Note:  Try java argument -XX:+PrintCompilation to show runtime JIT compiler behavior.)").nl();
     if (_parms._offset_column != null) {
